# python-example

./: Readme.md  main.py  pyproject.toml
templates/: article.html  index.html
